boltffi_bindgen/src/render/kotlin/snapshots/boltffi_bindgen__render__kotlin__templates__tests__snapshot_sync_function_with_string_param.snap
---
source: boltffi_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
fun greet(name: String): String {
    val nameWire = WireWriterPool.acquire(BoltFFIWire.sizeString(name))
    try {
        run {
            val wire = nameWire.writer
            BoltFFIWire.writeString(name)
        }
        val buf = Native.boltffi_greet(nameWire.ptr, nameWire.len)
            ?: throw FfiException(-1, "Null buffer returned")
        val reader = WireReader(buf)
        return reader.readString()
    } finally {
        nameWire.close().close()
    }
}
